<resources>
    <string name="AppName">Notes App</string>
    <string name="new_note_title">New note</string>
    <string name="ExtraTitle">Title</string>
    <string name="NoteText">Note text</string>
    <string name="btnBlue">Blue</string>
    <string name="btnOrange">Orange</string>
    <string name="btnGreen">Green</string>
    <string name="logout">LogOut</string>
    <string name="logout_message">Are you sure?</string>
    <string name="positive_button">Yes</string>
    <string name="negative_button">No</string>
    <string name="exit_title">Exit</string>
    <string name="remove_note">Remove note</string>
    <string name="change_color">Change color</string>
    <string name="note_delete_message">Remove?!?</string>
    <string name="note_delete_cancel">No</string>
    <string name="note_delete_ok">Yes</string>
</resources>
